--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "advtxt_backend",
+    "name": "advtxt_editor-backend",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.0.1",
     "description": "The backend for AdvTxt Editor",
     "dependencies": {
         "sails": "0.9.11",
