Working editor for new storage model.

--- a/frontend/bower.json
+++ b/frontend/bower.json
@@ -15,10 +15,11 @@
     "test",
     "tests"
   ],
-	"dependencies": {
-		"foundation": "5.0.*",
-		"knockout.js": "3.*",
-		"retina.js": "*",
-		"ace-builds": "1.1.*"
-	}
+  "dependencies": {
+    "foundation": "^5.2.0",
+    "knockout.js": "^3.0.0",
+    "retina.js": "*",
+    "lodash": "~2.4.1",
+    "jquery-ui": "~1.10.4"
+  }
 }
