--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "advtxt_editor-frontend",
-  "version": "0.0.1",
-  "description": "",
+  "version": "0.1.0",
+  "description": "The frontend application for the AdvTxt editor.",
   "main": "index.js",
   "author": "Nathan Wittstock <code@fardogllc.com>",
   "license": "MIT",
